# ChessEngineProject

./: .gitignore  CMakeLists.txt  clean_build_full.bat  cmake.txt  diff.patch  nn_safety.patch
docs/: engine_design.md  roadmap.md  training_notes.md
engine/: CMakeLists.txt
engine/app/: main_cli.cpp  main_uci.cpp
engine/include/chess/: pgn_trainer.h  search.h  types.h  uci.h
engine/include/engine/: Engine.h  NNBoardTensor.h  NNWrapper.h  bitboard.h  board.h  eval.h  move.h  movegen.h  search.h  types.h  zobrist.h
engine/src/: Engine.cpp  NNBoardTensor.cpp  NNWrapper.cpp  board.cpp  eval.cpp  move.cpp  movegen.cpp  search.cpp
preprocess/: config.py  fen_to_tensor.py  move_index.py  parse_pgn.py
python/: train_chessnet.py
python/data/: dataset_lmdb.py
python/export/: make_torchscript.py
python/models/: chessnet.py
python/train/: config.py  losses.py  trainer.py
python/utils/: lmdb_utils.py  seed.py
tools/: check_env.py  check_lmdb.py  fen_to_tensor.py  inspect_lmdb_sample.py  lmdb_integrity_checker.py  make_chessnet_ts.py  make_dummy_model.py  make_dummy_ts_model.py  parse_pgn.py  parse_pgn_envcheck.py  pgn_quality_checker.py  train_from_lmdb_final.py  verify_lmdb.py
tools/models/: chessnet.py  chessnet_v1.py
training/: CMakeLists.txt
training/include/training/: dataset.h  dataset.new  model.h  train_config.h
training/src/: dataset.cpp  model.cpp  train_main.cpp
